<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<HorizontalScrollView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content">

		<LinearLayout
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:orientation="vertical"
			android:padding="10dp">

			<TextView
				android:layout_height="wrap_content"
				android:text="@string/step1"
				android:layout_width="wrap_content"
				android:textIsSelectable="true"
				android:scrollHorizontally="false"
				android:autoLink="all" />

			<Button
				android:layout_height="wrap_content"
				android:text="@string/btnenable"
				android:layout_width="wrap_content"
				android:id="@+id/main_btn_enable"/>

			<Button
				android:layout_height="wrap_content"
				android:text="@string/btndisable"
				android:layout_width="wrap_content"
				android:layout_marginTop="10dp"
				android:id="@+id/main_btn_disable"/>

			<TextView
				android:layout_height="wrap_content"
				android:text="Text"
				android:layout_width="wrap_content"
				android:id="@+id/maintvifconfig"
				android:textIsSelectable="true"/>

		</LinearLayout>

	</HorizontalScrollView>

</ScrollView>

